# test-tdd-project

./: .gitignore  1-2.patch  1.patch  10.patch  12.patch  13.patch  2.patch  3.patch  4.patch  5.patch  6.patch  7.patch  8.patch  9.patch  ANALISE_PAGES_PROJETOS.md  AUDIT_CRITERIA_MATRIX.md  AUDIT_FILE_MAPPING.md  AUDIT_FINAL_REPORT.md  AUDIT_GAP_ANALYSIS_REPORT.json  AUDIT_PROMPT_VALIDATION.md  AUDIT_SCRIPT_IMPROVEMENTS_REPORT.md  CHANGELOG.md  CHANGE_REQUESTS_PATCHES_1-4.md  CLAUDE.md  CODEX_AUDIT_GRUPO_A.md  CODEX_AUDIT_GRUPO_B.md  CODEX_AUDIT_PACKAGE.md  CODEX_AUDIT_PROMPT.md  CODEX_AUDIT_PROMPT_COMPREHENSIVE.md  CODEX_AUDIT_PROMPT_ENTERPRISE.md  CODEX_AUDIT_TASK_1_2_1.md  CODEX_AUDIT_TASK_1_2_1_POST_FIXES.md  CODEX_ENTERPRISE_AUDIT_PROMPT.md  CODEX_FINAL_AUDIT_RESULTS.md  CODEX_FINAL_PRODUCTION_AUDIT_PROMPT.md  CODEX_FINAL_SYSTEM_AUDIT_PROMPT.md  CODEX_FOREIGN_KEY_INVESTIGATION_PROMPT.md  CODEX_NONETYPE_FIX_AUDIT_PROMPT.md  CODEX_PATCHES_REPORT.md  CODEX_PROMPTS_SUMMARY.md  (+254 more)
.audit/: all_py_files.txt  import_graph_refined.txt  imported_files.txt  internal_imports.txt  never_delete.txt  real_orphans.txt  risky_to_delete.txt  safe_to_delete.txt
.audit_intelligent/: intelligent_analysis.json  intelligent_audit_report_20250821_151136.md  intelligent_audit_report_20250821_200432.md  inventory.json  priority_files.txt
.audit_reports/: analysis_type_hints.out  architecture_review.out  audit_gap_analysis.out  audit_summary.txt  compare_structures.out  consolidated_metrics.json  db_backup.out  db_health.out  db_optimize.out  god_code_analytics_service.out  god_code_database.out  god_code_streamlit_app.out  identify_invalid_data.out  inventario.txt  map_epic_task_hierarchy.out  performance_analytics_service.out  performance_client_service.out  performance_timer_service.out  security_connection.out  security_core.out  security_user_model.out  tests_full.out  tests_smoke.out  token_usage_history.json
.github/: BRANCH_STRATEGY.md  PULL_REQUEST_TEMPLATE.md  gantt-config.yml  tdd-config.yml
.optimization_backups/: optimization_log_20250821_133910.txt  optimization_log_20250821_133944.txt  optimization_log_20250821_134004.txt  optimization_log_20250821_134428.txt  optimization_log_20250821_134434.txt  optimization_log_20250821_134522.txt  optimization_log_20250821_134640.txt  optimization_log_20250821_134719.txt  optimization_log_20250821_140135.txt  optimization_log_20250821_140330.txt  optimization_log_20250821_140441.txt  optimization_log_20250821_140539.txt  optimization_log_20250821_140917.txt  optimization_log_20250821_140929.txt  optimization_log_20250821_141930.txt  optimization_log_20250821_141949.txt  optimization_log_20250821_145133.txt  optimization_log_20250821_145153.txt  optimization_log_20250821_151147.txt  optimization_log_20250821_162951.txt  optimization_log_20250821_163004.txt  optimization_log_20250821_163208.txt  optimization_log_20250821_202559.txt  optimization_log_20250821_204731.txt  optimization_log_20250821_205224.txt  optimization_log_20250821_205237.txt  optimization_log_20250821_205714.txt  optimization_log_FIXED_20250821_143236.txt  optimization_log_FIXED_20250821_143336.txt  optimization_log_FIXED_20250821_143628.txt
.streamlit/: config.toml
.streamlit_cache/: db_query:calculate_epic_duration:0360d996f02ba9113caf975c8144499b.cache  db_query:calculate_epic_duration:06858ef3202500ce1f841d11438db70a2dcf0fcfe7d5cd6934c6b813f891106a.cache  db_query:calculate_epic_duration:08e687ce57f6595723cb0e248710be46.cache  db_query:calculate_epic_duration:1b67f2cf314ec002a4b3da977e8a45b2.cache  db_query:calculate_epic_duration:22801b1a9a7348baad01eb4ce037e112.cache  db_query:calculate_epic_duration:2c7eb0e517eeb7521f79eee25f5e70f0ee9e81e0fb55357b7801306c1a4cfa1a.cache  db_query:calculate_epic_duration:3d50626a77d05acac7cece4a20edbf6b638910ca3b0f74c626a86e5fc093e952.cache  db_query:calculate_epic_duration:51987ca089380fbfcf91a31d79d69d5f.cache  db_query:calculate_epic_duration:5fc2785ef2220b214501214fbe29960a6a7e0eedbb70386c5d4648e8712d195c.cache  db_query:calculate_epic_duration:821da51f31a08cb013b54f6ae4c50448.cache  db_query:calculate_epic_duration:851307ddd19125e80b2e07175d68cb08.cache  db_query:calculate_epic_duration:910e1f4cbd9d95f7edf70c4cadf1cd48.cache  db_query:calculate_epic_duration:9d8628db69bc447c0152347a051cb70dce8bf98390365a90a069b6046798b2c4.cache  db_query:calculate_epic_duration:a584aa0f4903e9c5cae695b10cd00b39.cache  db_query:calculate_epic_duration:a75ca79f58fb4cde37bc91f2ad22ba4a9081286a44b62b236d618d2f9f104516.cache  db_query:calculate_epic_duration:b094ca66365aa109693b33a49eca238f.cache  db_query:calculate_epic_duration:b3638b6e499018e1da5bddf5f45aabc7.cache  db_query:calculate_epic_duration:d647fdab056c5dbbad16f640b617f1b4.cache  db_query:calculate_epic_duration:d812b13093a8db185640dbc5cdeb0c22.cache  db_query:calculate_epic_duration:e236e917d044d7261d8fe0700a25b352.cache  db_query:calculate_epic_duration:fa1481df8cc95de2f56b46c0b13ded9a.cache  db_query:calculate_epic_duration:fbb6be7381d38b3b8a3693b34f25454c.cache  db_query:calculate_epic_duration:ff6e1cfedcb978d36c020b72417c90d6.cache  db_query:get_daily_summary:09f21435c32c28fc83ec736b23c4d6d4.cache  db_query:get_daily_summary:10113458d486151ac1e08eb1a3ffa5eb.cache  (+238 more)
config/python/: pyproject.toml  pytest.ini
tdd-project-template/: AUDIT_FINAL_REPORT.md  INTEGRATION_REALITY_REPORT.md  README.md  pyproject.toml  requirements.txt
tdd-project-template/.github/workflows/: pages-deploy.yml  pages.yml
tdd-project-template/docs/: Gemfile  TDD_COMMIT_PATTERNS.md  _config.yml  dashboard.html  gantt_progress.html  index.md  tdd_gantt_progress.html
tdd-project-template/epics/: epic_1.json  template_epic.json
tdd-project-template/scripts/: audit_architecture.py  audit_code_quality.py  audit_cross_platform.py  audit_end_to_end.py  audit_etl_comparison.py  audit_functionality.py  audit_integration_reality.py  audit_live_deployment.py  audit_production_readiness.py  audit_user_experience.py  commit_helper.py  test_setup.py
tdd-project-template/scripts/visualization/: tdd_gantt_tracker.py
(+895 files in other folders)
